# enum-adt

./: README.md  enum_adt.py  pyproject.toml  test_adt.py
.github/workflows/: ci.yml  release.yml
