[project]
name = "enum-adt"
description = "Enum Algebraic Data Types (ADTs) for Python"
authors = [
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/frostming/enum-adt"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
version = {source = "scm"}

[tool.pdm.build]
includes = ["enum_adt.py"]
source-includes = ["test_adt.py"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
]
